Fix #965 - Reset button/item count overlaps search input query on filter bar

--- a/static/scss/components/filter-bar.scss
+++ b/static/scss/components/filter-bar.scss
@@ -46,21 +46,29 @@
     input[type="search"] {
         background-image: url(/static/images/icon-search.svg);
         margin-bottom: 0;
-        padding-right: 1.75rem;
-        &:focus + .c-filter-case-count {
-            opacity: .5;
-        }
-        &:focus + .c-filter-case-count + .c-filter-reset {
+        padding-right: 90px;
+        position: relative;
+        z-index: 0;
+        &:focus + .c-filter-search-controls {
             opacity: 1;
         }
     }
 
+    .c-filter-search-controls {
+        position: absolute;
+        right: $spacing-sm;
+        display: flex;
+        align-items: center;
+        height: 100%;
+        top: 0;
+        z-index: 1;
+        opacity: 0;
+        transition: opacity .2s ease-out;
+    }
+
     .c-filter-case-count {
         display: flex;
-        opacity: 0;
-        position: absolute;
-        right: 2.5rem;
-        top: 0;
+        margin-right: $spacing-sm;
         align-items: center;
         height: 100%;
         transition: opacity .2s ease-out;
@@ -141,10 +149,6 @@
     outline: 0;
     appearance: none;
     border: 0;
-    position: absolute;
-    right: .5rem;
-    top: .5rem;
-    opacity: 0;
 
     img {
         width: 1rem;
